# China2D

./: .gitignore  CMakeLists.txt  README.md
China2D/: CMakeLists.txt  China2D.cmake
China2D/China2DApi/: China2DApi.h  IModule.h  IRenderMesh.h  IRenderer.h  IResource.h  IResourceManagerApi.h  ITaskManagerApi.h  ITexture.h  IWindow.h  MultiSys.h  Structs.h  Vector2.h  Vector3.h
China2D/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  main.cpp
China2D/Engine/Components/Interface/: IEngineComponent.h  ILog.h  ILogic.h  IResourceManager.h  ITaskManager.h
China2D/Engine/Components/Log/: Header.h  Log.cpp  Log.h
China2D/Engine/Components/Logic/: Header.h  Logic.cpp  Logic.h
China2D/Engine/Components/ResourceManager/: ResourceManager.cpp  ResourceManager.h
China2D/Engine/Components/TaskManager/: Header.h  TaskGroup.cpp  TaskGroup.h  TaskManager.cpp  TaskManager.h
China2D/Engine/Graphics/: GLInc.h  IRenderHIPlatform.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Window.cpp  Window.h
China2D/Engine/Graphics/OpenGL/: RenderHIOpenGL.cpp  RenderHIOpenGL.h
China2D/Engine/Graphics/OpenGL/Glfw/lib/: glfw3.lib
China2D/Engine/OpenGL/Glew/lib/: glew32d.exp  glew32d.lib  libglew32d.lib
China2D/Engine/Platform/: IBasePlatform.h
China2D/Engine/Platform/PlatformGlfw/: GlfwWindow.cpp  GlfwWindow.h  PlatformGlfw.cpp  PlatformGlfw.h
China2D/Utils/: CommonQueue.h  SafeArray.h  SafeBit.h  SafeMemory.cpp  SafeMemory.h  SafeQueue.h  SafeString-Linux.cpp  SafeString-Windows.cpp  SafeString.h  SafeSystem.cpp  SafeSystem.h  SafeThread.cpp  SafeThread.h  SafeTools.cpp  SafeTools.h  XAOI.h  XAStar.h  XBase64.h  XBuffer.h  XDumper.cpp  XDumper.h  XEventPool.h  XFile.cpp  XFile.h  XLock.h  XPool.h  XThreadPool.h  XUUID.h
XGame/: CMakeLists.txt
XGame/China2DTest/: CMakeLists.txt  China2DTest.cpp  China2DTest.h  DllExport.cpp  Header.h
XGame/Interface/: IChina2DTest.h
